# cce

./: README.md  demo_metaphor.py  pyproject.toml
cce/: __init__.py  cli.py  codebook.py  crystallization.py  engine.py  grammar.py  knowledge.py  lexicon.py  memory.py  metaphor.py  nucleation.py  parser.py  particle.py  plasma.py  realization.py  templates.py
data/: de_knowledge.json  de_lexicon.json  de_lexicon_5k.json
scripts/: audit_kg.py  expand_data.py  explore_metaphors.py  multi_turn_test.py
tests/: test_codebook.py  test_engine.py  test_grammar.py  test_knowledge.py  test_memory.py  test_parser.py  test_particle.py
tools/: build_lexicon.py
