[project]
name = "cce"
version = "0.1.0"
description = "Cognitive Crystallization Engine — Language generation via phase transitions in concept space"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
cce = "cce.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
